--- a/registration-form/src/app/app.component.html
+++ b/registration-form/src/app/app.component.html
@@ -30,6 +30,11 @@
     align-items: center;
   }
 
+  .form-title {
+    font-weight: bold;
+    font-size: x-large;
+  }
+
 </style>
 
 <div class="toolbar" role="banner">
@@ -43,7 +48,10 @@
 
 <div class="content" role="main">
 
-    <span>{{ title }}</span>
+    <span class="form-title">{{ title }}</span>
+  <div>
+    <app-reg-form></app-reg-form>
+  </div>
 
 </div>
 <router-outlet></router-outlet>
